deployment/deployment-demo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-demo
  labels:
    app: demo-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
      - name: demo-pod
        image: docker.io/linuxsmurfen/deployment-demo
        ports:
        - containerPort: 8080
          protocol: TCP
    restartPolicy: Never
