deployment/service-demo.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  namespace: foobar
spec:
  selector:
    app: demo-app
  ports:
    - name: demo-ports
      protocol: TCP
      port: 9999
      targetPort: 8080
